<resources>
    <string name="app_name">MascotApps</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- drawer nemu -->

    <string name="navigation_drawer_home"> INICIO </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_your_pets">Tus macotas</string>
    <string name="navigation_drawer_places">Lugares</string>
    <string name="navigation_drawer_food_places">Alimentos</string>
    <string name="navigation_drawer_veterinarian_places">Veterinarias</string>
    <string name="navigation_drawer_tool_places">Articulos</string>
    <string name="navigation_drawer_cares">Cuidados</string>
    <string name="navigation_drawer_hygienic_cares">Higienicos</string>
    <string name="navigation_drawer_food_cares">Alimenticios</string>
    <string name="navigation_drawer_vaccines">Vacunas</string>
    <string name="navigation_drawer_settings">Configuración</string>
    <string name="navigation_drawer_about_team">Acerca de</string>
    <string name="navigation_drawer_app">MascotApps</string>
</resources>
