<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/navigation_drawer_home" />
       
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pets"
            android:icon="@drawable/ic_pets_black_24dp"
            android:title="@string/navigation_drawer_your_pets" />

    </group>

    <item android:title="@string/navigation_drawer_places">
        <menu>
            <item
                android:id="@+id/nav_alimentos"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                android:title="@string/navigation_drawer_food_places" />
            <item
                android:id="@+id/nav_veterinarias"
                android:icon="@drawable/ic_local_pharmacy_black_24dp"
                android:title="@string/navigation_drawer_veterinarian_places" />
            <item
                android:id="@+id/nav_Articulos"
                android:icon="@drawable/ic_local_atm_black_24dp"
                android:title="@string/navigation_drawer_tool_places" />
        </menu>
    </item>

    <item android:title="@string/navigation_drawer_cares">
        <menu>
            <item
                android:id="@+id/nav_hygienic_cara"
                android:icon="@drawable/ic_assignment_black_24dp"
                android:title="@string/navigation_drawer_hygienic_cares" />
            <item
                android:id="@+id/nav_food_care"
                android:icon="@drawable/ic_local_dining_black_24dp"
                android:title="@string/navigation_drawer_food_cares" />
            <item
                android:id="@+id/nav_vaccines"
                android:icon="@drawable/ic_view_list_black_24dp"
                android:title="@string/navigation_drawer_vaccines" />
        </menu>
    </item>

</menu>
